# EpitechProject

./: README.md
2017/103cipher_2017/: Makefile  main.c
2017/104intersection_2017/: 104intersection  Makefile  calcule.c  check_and_disp.c  main.c
2017/105torus_2017/: Makefile  main.c
2017/CPE_BSQ_2017/: Makefile  algo.c  main.c
2017/CPE_getnextline_2017/: get_next_line.c  get_next_line.h
2017/CPE_matchstick_2017/: Makefile
2017/CPE_n4s_2017/: Makefile
2017/CPE_pushswap_2017/: Makefile  push_swap
2017/CPE_solostumper_1_2017/: Makefile  main.c
2017/CPool_Day01_2017/: mr_clean  prepare_my_repo.sh  push_that.sh
2017/CPool_Day02_2017/: count_files.sh  find_sh.sh  gotta_catch_them_all.sh  how_many_are_we.sh  looneytised.sh  r_tacpy.sh  skip.sh
2017/CPool_Day03_2017/: my_print_alpha.c  my_print_comb.c  my_print_comb2.c  my_print_digits.c  my_print_revalpha.c
2017/CPool_Day04_2017/: my_evil_str.c  my_evil_str.gcda  my_getnbr.c  my_getnbr.gcda  my_putstr.c  my_putstr.gcda  my_strlen.c  my_strlen.gcda  my_swap.gcda
2017/CPool_Day05_2017/: my_compute_factorial_it.c  my_compute_factorial_rec.c  my_compute_power_it.c  my_compute_power_rec.c  my_is_prime.c
2017/CPool_Day06_2017/: my_putbnr_base.c  my_revstr.c  my_showmem.c  my_str_isalpha.c  my_str_islower.c  my_str_isnum.c  my_str_isprintable.c  my_str_isupper.c  my_strcapitalize.c  my_strcmp.c  my_strcpy.c  my_strlowcase.c  my_strncmp.c  my_strncpy.c  my_strstr.c  my_strupcase.c
2017/CPool_Day07_2017/: my_strcat.c  my_strncat.c
2017/CPool_Day08_2017/: concat_params.c  my_strdup.c
2017/CPool_Day11_2017/: my_list_size.c  my_params_to_list.c  my_rev_list.c
2017/CPool_Day13_2017/: windows.c
2017/CPool_finalstumper_2017/: Makefile  defin.c  error_check.c  main.c  rush_detect.c
2017/CPool_infinadd_2017/: calc.c  error_managing.c  le_signe.c  main.c  processing_calc_dect.c
2017/CPool_match-nmatch_2017/: match.c
2017/PSU_42sh_2017/: Makefile
2017/PSU_minishell1_2017/: Makefile
2017/PSU_minishell2_2017/: Makefile
2017/PSU_my_ls_2017/: Makefile  my_ls
2017/PSU_my_printf_2017/: Makefile
2017/PSU_my_printf_bootstrap_2017/: disp_stdarg.c  sum_stdarg.c
2017/PSU_my_sokoban_2017/: Makefile  main.c  my_sokoban  tools.c
2017/PSU_tetris_2017/: Makefile
2017/my_cook_2017/: Makefile
2017/my_hunter_2017/: Makefile  drawing.c  event.c  game.c  main.c  my_hunter  windows.c
2017/my_radar_2017/: Makefile  main.c  my_radar  radar.h  set.c  tools.c
2017/my_runner_2017/: Makefile  animation.c  framebuffer.h  main.c  obstacle.c  set.c  tools.c
2017/my_screensaver_2017/: Makefile  animation1.c  animation2.c  animation3.c  animation4.c  index.c  main.c  my_screensaver  windows.c
2018/ASM_minilibc_2018/: Makefile
2018/FUN_deBruijn_2018/: Makefile  stack.yaml
2018/FUN_imageCompressor_2018/: .gitignore  ChangeLog.md  LICENSE  Makefile  README.md  package.yaml  usage.txt
2018/NWP_myarpspoof_2018/: .gitignore  Makefile
2018/NWP_mychap_2018/: .gitignore  Makefile
2018/NWP_myftp_2018/: Makefile
2018/OOP_arcade_2018/: .gitignore  Makefile
2018/OOP_indie_studio_2018/: CMakeLists.txt  README.md
2018/OOP_indie_studio_2018/include/: IScene.hpp  MapGen.hpp  SceneHandler.hpp
2018/OOP_indie_studio_2018/include/game/: Bomb.hpp  BombUp.hpp  Bonus.hpp  Character.hpp  Core.hpp  EventReceiver.hpp  Explosion.hpp  Game.hpp  IA.hpp  ICharacter.hpp  PowerUp.hpp  Save.hpp  Sound.hpp  SpeedUp.hpp  TileMap.hpp
2018/OOP_indie_studio_2018/include/game/CharacterSelection/: CharacterSelection.hpp  CharacterSelectionEvent.hpp
2018/OOP_indie_studio_2018/include/game/Credits/: Credits.hpp  CreditsEvent.hpp
2018/OOP_indie_studio_2018/include/game/Menu/: Menu.hpp  MenuEvent.hpp
2018/OOP_indie_studio_2018/include/game/PauseMenu/: PauseMenu.hpp  PauseMenuEvent.hpp
2018/OOP_indie_studio_2018/include/game/PlayerInfo/: PlayerInfo.hpp
2018/OOP_indie_studio_2018/media/lego/: bomb.3DS
2018/OOP_indie_studio_2018/script/: clean_windows.bat
2018/OOP_indie_studio_2018/src/: Bomb.cpp  Core.cpp  EventReceiver.cpp  Explosion.cpp  Game.cpp  Save.cpp  TileMap.cpp  main.cpp
2018/OOP_indie_studio_2018/src/Character/: Character.cpp  CharacterSelection.cpp  CharacterSelectionEvent.cpp
2018/OOP_indie_studio_2018/src/Credits/: Credits.cpp  CreditsEvent.cpp
2018/OOP_indie_studio_2018/src/IA/: IA.cpp  tasks.txt
2018/OOP_indie_studio_2018/src/MapGen/: MapGen.cpp
2018/OOP_indie_studio_2018/src/Menu/: Menu.cpp  MenuEvent.cpp
2018/OOP_indie_studio_2018/src/PauseMenu/: PauseMenu.cpp  PauseMenuEvent.cpp
2018/OOP_indie_studio_2018/src/PlayerInfo/: PlayerInfo.cpp
2018/OOP_indie_studio_2018/src/SceneHandler/: SceneHandler.cpp
2018/OOP_indie_studio_2018/src/Sound/: Sound.cpp
2018/OOP_indie_studio_2018/src/powerUp/: BombUp.cpp  Bonus.cpp  PowerUp.cpp  SpeedUp.cpp
2018/PSU_2018_malloc/: Makefile
2018/PSU_2018_nmobjdump/: Makefile
2018/SHL_2018_shell/: .bdshrc  bdsh
2018/cpp_d03_2018/: Makefile  append_and_assign.c  at_clear_size.c  c_str_and_to_int.c  clear.c  compare.c  (+3 more)
2019/CPP_babel_2019/Client/: CMakeLists.txt  conanfile.txt
2019/CPP_babel_2019/Client/include/: Histo.hpp  Serial.hpp  User.hpp  mainwindow.h  mainwindow.ui  peerTopeer_rfc.h  server.h  ui_mainwindow.h
2019/CPP_babel_2019/Client/include/Sound/: CallManager.hpp  ICodec.hpp  ISoundDevice.hpp  SoundManager.hpp
2019/CPP_babel_2019/Client/include/Sound/Opus/: Opus.hpp
2019/CPP_babel_2019/Client/include/Sound/PortAudio/: IDataFlow.hpp  PortAudioM.hpp  Sound.hpp  SoundInput.hpp  SoundOutput.hpp
2019/CPP_babel_2019/Client/src/: User.cpp  callState.cpp  main.cpp  mainwindow.cpp  server.cpp
2019/CPP_babel_2019/Client/src/Sound/: CallManager.cpp  Opus.cpp  PortAudioM.cpp  SoundInput.cpp  SoundManager.cpp  SoundOutput.cpp
2019/CPP_babel_2019/Server/: CMakeLists.txt  compile.sh  conanfile.txt
2019/CPP_babel_2019/Server/include/: Contact.hpp  DbComm.hpp  Dbcall.hpp  Histo.hpp  Serial.hpp  User.hpp  rfc.hpp  tcp_connection.hpp
2019/CPP_babel_2019/Server/src/: Contact.cpp  DbComm.cpp  Dbcall.cpp  Histo.cpp  User.cpp  main.cpp  tcp_connection.cpp
(+1027 files in other folders)
